# odd-collector-clickhouse

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  start.sh
.github/workflows/: run-tests.yaml
config_example/: clickhouse.yaml
odd_collector_clickhouse/: __init__.py  __main__.py
odd_collector_clickhouse/adapters/clickhouse/: repository.py
odd_collector_clickhouse/adapters/clickhouse/domain/: __init__.py
odd_collector_clickhouse/adapters/clickhouse/grammar_parser/: filed_types.lark  parser.py
odd_collector_clickhouse/adapters/clickhouse/mappers/: columns.py
odd_collector_clickhouse/adapters/clickhouse/mappers/integrated_engines/: engine_parsers.py
odd_collector_clickhouse/domain/: plugin.py  predefined_data_source.py
tests/adapters/clickhouse/: test_dataset_field_building.py
tests/adapters/clickhouse/domain/: test_grammar_parser.py  test_integration_engine.py
