[tool.poetry]
name = "odd-collector-clickhouse"
version = "0.1.0"
description = ""
authors = ["Alik Kurdyukov <alik@kurdyukov.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
odd-collector-sdk = {git = "https://github.com/akurdyukov/odd-collectors.git", subdirectory = "odd-collector-sdk", branch = "clickhouse-types"}
clickhouse-connect = "^0.8.11"
parameterized = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
