[tool.poetry]
name = "odd-collector-clickhouse"
version = "0.1.0"
description = ""
authors = ["Alik Kurdyukov <alik@kurdyukov.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
odd-collector-sdk = {git = "https://github.com/akurdyukov/odd-collectors.git", subdirectory = "odd-collector-sdk", branch = "clickhouse-types"}
clickhouse-connect = "^0.8.11"
parameterized = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N"  # PEP8 naming convetions
]
ignore = [
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "D401"  # imperative mood
]

[tool.ruff.lint.pydocstyle]
convention = "google"
